--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "divinechile-deno-m3u8-p-11"
+          project: "deno-m3u8-proxy"
           entrypoint: "server.js"
           root: "."
           
